# pico-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BNO055/: CMakeLists.txt  bno055_pico.cpp  bno055_pico.h  main.cpp
adc/microphone_adc/: CMakeLists.txt  microphone_adc.c
blink/: CMakeLists.txt  blink.c
charlieplex/: CMakeLists.txt  charlieplex.c  charlieplex.pio
cindex/: CMakeLists.txt  cindex.cpp  cindex.h  cindex.hpp  hello_cindex.cpp
divider/: CMakeLists.txt
findfun/: CMakeLists.txt  CmakeLists.txt  example_ff.cpp  findfun.cpp  findfun.h
findfun/example/: CMakeLists.txt  example_ff.cpp
findfun/instrutune/: CMakeLists.txt  blink.pio  fstrobe.pio  instrutune.cpp  ssd1306.h  strobe.pio
findfun/picotuner/: CMakeLists.txt  main.cpp  strobe.pio
gpio/hello_gpio_irq/: CMakeLists.txt  hello_gpio_irq.c
hello_world/serial/: CMakeLists.txt
hello_world/usb/: hello_usb.c
i2c/: CMakeLists.txt
i2c/ad5593r_i2c/: CMakeLists.txt  ad5592r-base.c  ad5592r-base.h  ad5593r.c  ad5593r.h  ad5593r_pico.c  ad5593r_pico.h  ad5593r_pico_i2c.c  ad5593r_pico_i2c.h  main.c  no_os_i2c.c  no_os_spi.h
i2c/bno055_i2c/: CMakeLists.txt  bno055_i2c.c  bno055_i2c.cpp  bno055_i2c.h  main.c  main.cpp
i2c/bno085_i2c/: CMakeLists.txt  bno085_i2c.cpp  bno085_i2c.h  main.c  main.cpp
i2c/bus_scan/: CMakeLists.txt  bus_scan.c
i2c/bus_test/: CMakeLists.txt  bus_test.c
i2c/kxtj3_1057_i2c/: CMakeLists.txt  kxtj3_1057_i2c.cpp  kxtj3_1057_i2c.h  main copy.cpp  main.cpp
i2c/lis2dw12_i2c/: CMakeLists.txt  lis2dw12_pico.c  lis2dw12_pico.h  main.c
i2c/m24c64_i2c/: CMakeLists.txt  main.c
i2c/oled_i2c/: oled_i2c.c
i2c/pca9685emu_i2c/: CMakeLists.txt  pca9685emu_i2c.cpp
i2c/slave_mem_i2c/: CMakeLists.txt
i2c/ssd1306_i2c/: ssd1306_i2c.c
i2c/test_periph_i2c/: CMakeLists.txt  test_periph_i2c.cpp
i2c/vl53l5cx_i2c/: CMakeLists.txt  Example_1_ranging_basic.c  Example_2_get_set_params.c  Example_3_ranging_modes.c  Example_4_power_modes.c  Example_5_multiple_targets_per_zone.c  Example_6_I2C_and_RAM_optimization.c  Example_7_calibrate_xtalk.c  Example_8_vizualize_xtalk_data.c  main.c  platform.c  platform.h  vl53l5cx_api.c  vl53l5cx_pico.c  vl53l5cx_pico.h
maker_pi_rp2040/: CMakeLists.txt
maker_pi_rp2040/maker_pi_mc/: CMakeLists.txt  bmc.cpp  bmc.h  maker_pi_mc.cpp  pid.cpp  pid.h
mtr_ctrl/: CMakeLists.txt  mtr_ctrl_brushed.c  mtr_ctrl_brushed.cpp  mtr_ctrl_s1.c  pid.cpp
multicore/hello_multicore/: CMakeLists.txt
multicore/multicore_fifo_irqs/: CMakeLists.txt  multicore_fifo_irqs.c
multicore/multicore_runner/: CMakeLists.txt
pico_feather/: CMakeLists.txt  main.c  ssd1306_i2c.h
pico_w/: CMakeLists.txt
pico_w/access_point/: CMakeLists.txt
pico_w/blink/: picow_blink.c
pico_w/bt/nordic_spp_le_counter/: CMakeLists.txt
pico_w/bt/standalone/: CMakeLists.txt  temp_sensor.gatt
pico_w/iperf/: CMakeLists.txt
pico_w/ntp_client/: CMakeLists.txt
pico_w/web_server/: main.c
pico_w/wifi/: CMakeLists.txt
pico_w/wifi/access_point/: CMakeLists.txt
pico_w/wifi/blink/: picow_blink.c
pico_w/wifi/iperf/: CMakeLists.txt
pico_w/wifi/mdns/: CMakeLists.txt  lwipopts.h  main.c
pico_w/wifi/picow_pickup/: CMakeLists.txt  mdns_picow.c  mdns_picow.h  picow_pickup.c
pico_w/wifi/python_test_tcp/: python_test_tcp_server.py
pico_w/wifi/tcp_client/: CMakeLists.txt  picow_tcp_client.c
pico_w/wifi/tcp_client_ws/: CMakeLists.txt  main.cpp
pico_w/wifi/tcp_server/: CMakeLists.txt
pico_w/wifi/tcp_server_post/: CMakeLists.txt  picow_tcp_server_post.c  temp.c
pico_w/wifi/tls_client/: CMakeLists.txt
pico_w/wifi/udp_beacon/: CMakeLists.txt
pico_w/wifi/web_ctrlr/: CMakeLists.txt  hold.c  htmldata.c  lwipopts.h  main.c
pico_w/wifi/web_joystick/: CMakeLists.txt  html_response.c  htmldata.c  lwipopts.h  main.c
pico_w/wifi/web_server/: CMakeLists.txt  index.shtml  (+1 more)
picow_pickup/: CMakeLists.txt  hold_picow_pickup.c  lwipopts.h  mdns_picow.h  picow_pickup.c  pwp_tcp_server.c  pwp_tcp_server.h
pio/: CMakeLists.txt
pio/pio_blink/: CMakeLists.txt  blink.c  blink.pio  test.pio  test.txt
pio/pwm/: CMakeLists.txt  pwm.c
pio/quadrature_encoder/: quadrature_encoder.c  quadrature_encoder.pio
pio/ticker/: CMakeLists.txt  blink.pio  counter.pio  hall.pio  ticker.c  ticker.pio
pwm/measure_duty_cycle/: CMakeLists.txt  measure_duty_cycle.c
rover/: CMakeLists.txt
rover/rover2/: CMakeLists.txt  bmc.cpp  html_response.c  html_server.h  lwipopts.h  quadrature_encoder.pio  rover2.c  rover2.cpp
rover/rover3/: CMakeLists.txt  generate_html_response.py  html_response.c  html_server.c  html_server.h  mdns_picow.c  messages.c  messages.h  pid.cpp  pid.h  pin_encoder.pio  rover3.cpp
rover1/: CMakeLists.txt  rover1.c
scratch/: CMakeLists.txt  main.c  pin_blink.pio  pin_monitor.pio  pwm.pio  swf.pio  ticker.pio
siggen/: CMakeLists.txt  siggen.cpp  sin.h
spi/: CMakeLists.txt
spi/ads7038_spi/: ads7038.c  ads7038.h  hal.c  hal.h
spi/bno085_spi/: CMakeLists.txt  bno085_spi.c  bno085_spi.cpp  bno085_spi.h  bno085_spi.hpp  main.c  main.cpp
spi/spi_sd/: CMakeLists.txt
spin_test/: CMakeLists.txt  bno055.h  bno055_i2c.c  bno085_i2c.h  spin_test.cpp
spin_tests/: CMakeLists.txt
spin_tests/st_bno055/: CMakeLists.txt  st_bno055.cpp
spin_tests/st_bno085/: CMakeLists.txt  bno085_i2c.cpp  hall.pio  st_bno085.cpp
tmc_stepsticks/: CMakeLists.txt  tmc2208_pico.c  tmc2208_pico.h  tmc2208_test.c
tmc_stepsticks/tmc/ic/TMC2208/: TMC2208.c
tof8_imu/: CMakeLists.txt  main.c
uart/hello_uart/: hello_uart.c
uros/: CMakeLists.txt
uros/bno085_uros/: CMakeLists.txt  bno085_uros_usb.cpp
uros/tof8_imu_uros_usb/: CMakeLists.txt  tof8_imu_uros_usb.cpp
uros/usb_example/: CMakeLists.txt  usb_example_uros.c
uros/usb_example_uros/: usb_example_uros.c
uros/vl53l5cx_uros/: CMakeLists.txt  vl53l5cx_uros.c
uros/vl53l5cx_uros_usb/: CMakeLists.txt  vl53l5cx_uros_usb.c
uros/wifi_example/: CMakeLists.txt  wifi_example_uros.c
uros/wifi_example_uros/: wifi_example_uros.c
wave/: CMakeLists.txt  main.c
ws/: CMakeLists.txt
ws/128_lcd/: CMakeLists.txt
zoefib/: CMakeLists.txt  main.c
(+26 files in other folders)
